background yellow color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   </head>
   <body>
     <h1>HEllo Sanidya</h1>
-    <input type="button" onclick="hello()" value="Click Me" />
+    <div style="text-align: center">
+      <input type="button" onclick="hello()" value="Click Me" />
+    </div>
     <script src="hello.js"></script>
   </body>
 </html>
